Fixed dropdown overflowing body when 0 countries displayed

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -9,7 +9,7 @@
   --clr-elements-hover: #f0f0f0;
   --clr-text: #111517;
   --clr-input: #858585;
-  --clr-outline: #999;
+  --clr-outline: #bbb;
 
   --border-radius: 3px;
   --border-radius-circle: 1000px;
@@ -30,7 +30,7 @@
   --clr-elements-hover: #232e38;
   --clr-text: #f9f9f9;
   --clr-input: #f9f9f9;
-  --clr-outline: #ccc;
+  --clr-outline: black;
 
   --box-shadow: rgba(0, 0, 0, 0.24) 3px 3px 8px;
   --box-shadow-hover: rgba(0, 0, 0, 0.24) 0px 4px 16px;
@@ -59,6 +59,7 @@ body {
   position: relative;
   letter-spacing: 0.8px;
   font-weight: 300;
+  min-height: 100%;
 }
 
 a {
@@ -199,6 +200,7 @@ button {
       background-color: var(--clr-elements);
       color: var(--clr-text);
       width: 150px;
+      height: 222px;
       overflow: hidden;
       top: 47px;
       right: 50%;
